--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "npm run clean && npm run develop",
+    "start": "npm run develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "clean": "rm -rf .cache public",
