Let’s put a password code to access the presskit

--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,5 +1,6 @@
 siteTitle: Listed Productions
 siteUrl: 'https://listedproductions.com'
+presskitPwd: 'listed'
 siteDescription: >-
   Listed Productions music productions and artists.
 socialMediaCard:
