--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/thriveweb/yellowcake"
   },
   "dependencies": {
+    "@mkitio/gatsby-theme-password-protect": "^2.1.2",
     "@raae/gatsby-remark-oembed": "^0.1.1",
     "@reach/router": "^1.2.1",
     "date-fns": "^1.30.1",
