--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,6 +1,6 @@
 siteTitle: Listed Productions
 siteUrl: 'https://listedproductions.com'
-presskitPwd: 'listed'
+presskitPwd: listed
 siteDescription: >-
   Listed Productions music productions and artists.
 socialMediaCard:
